k8s/deployment-ghcr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow
  labels:
    app: wisecow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
        - name: wisecow
          image: ghcr.io/Kirtan-lokadiya/wisecow:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4499
          readinessProbe:
            tcpSocket:
              port: 4499
            initialDelaySeconds: 2
            periodSeconds: 5
